add updates to the vignettes and README docs based on TR comments; update functions and/or documentation based on minor identified issues; update the git ignore file

--- a/vignettes/css/rmdformats.css
+++ b/vignettes/css/rmdformats.css
@@ -157,9 +157,9 @@ code {
 
 .noticebox {
   padding: 1em;
-  background: lightgray;
-  color: blue;
-  border: 2px solid black;
+  background: var(--light-gray);
+  color: var(--pale-tone);
+  border: 2px solid var(--strong-tone);
   border-radius: 10px;
 }
 
